@@ -16,6 +16,7 @@ Version 1.4.2
 * Add scp capability to mk5cp
 * MPI errors are captured and logged
 * Stand-alone utility "sukill" added
+* Pass on restartSeconds to mpifxcorr in support of restarting jobs
 
 Version 1.4.1
 ~~~~~~~~~~~~
